[tool.poetry]
name = "cribbage"
version = "0.1.0"
description = "Cribbage for your command line"
authors = ["Alex Carlin <alxcarln@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"
tqdm = "^4.53.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
