[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cribbage"
version = "1.3.3"
authors = [{name="Alex Carlin", email="alex@inkisbetter.com" }]
description = "Cribbage for your command line"
readme = "README.md"
dependencies = ["numpy", "tqdm", "pytest", "rich"]
requires-python = ">=3.9"

[project.scripts]
cribbage = "cribbage.main:main"

[project.urls]
"Homepage" = "https://github.com/dacarlin/cribbage"

